--- a/myapp/package.json
+++ b/myapp/package.json
@@ -13,5 +13,9 @@
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"svelte": "^5.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"lucide": "^0.474.0",
+		"open-props": "^1.7.10"
 	}
 }
