--- a/myapp/package.json
+++ b/myapp/package.json
@@ -15,6 +15,8 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@fontsource-variable/jetbrains-mono": "^5.1.2",
+		"@fontsource-variable/manrope": "^5.1.1",
 		"lucide": "^0.474.0",
 		"open-props": "^1.7.10"
 	}
