--- a/myapp/package.json
+++ b/myapp/package.json
@@ -11,6 +11,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"mdsvex": "^0.12.3",
 		"svelte": "^5.0.0",
 		"vite": "^5.0.3"
 	},
