--- a/myapp/package.json
+++ b/myapp/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"mdsvex": "^0.12.3",
 		"svelte": "^5.0.0",
+		"typescript": "^5.7.3",
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
