--- a/myapp/package.json
+++ b/myapp/package.json
@@ -21,6 +21,8 @@
 		"@fontsource-variable/manrope": "^5.1.1",
 		"lucide": "^0.474.0",
 		"open-props": "^1.7.10",
+		"rehype-slug": "^6.0.0",
+		"remark-toc": "^9.0.0",
 		"shiki": "^2.1.0"
 	}
 }
