--- a/myapp/package.json
+++ b/myapp/package.json
@@ -20,6 +20,7 @@
 		"@fontsource-variable/jetbrains-mono": "^5.1.2",
 		"@fontsource-variable/manrope": "^5.1.1",
 		"lucide": "^0.474.0",
+		"lucide-svelte": "^0.474.0",
 		"open-props": "^1.7.10",
 		"rehype-slug": "^6.0.0",
 		"remark-toc": "^9.0.0",
